k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  # 라벨링과 달리 필터링은 안됨. 단순 메타데이터를 저장하는 용도
  # NGINX Ingress Controller에 의해 처리될 것을 명시
  annotations:
    kubernetes.io/ingress.class: nginx
    # 앞서 생성한 발급자 지정
    cert-manager.io/cluster-issuer: http-issuer
  name: nginx-tls

spec:
  # 외부 트래픽을 어떻게 처리할 지 정의
  rules:
    # 특정 도메인으로 들어오는 트래픽에 대해 라우팅 정의, 생략시 모든 트래픽 처리
    - host: nokchax.kro.kr
      http:
        paths:
          - path: /
            backend:
              serviceName: subway-service
              servicePort: 80
  tls:
    - hosts:
        - nokchax.kro.kr

      # Secret 리소스를 생성하지 않아도 cert-manager에서 자동으로 인증서를 발급받아서 Secret을 생성한다. 사용자는 생성될 Secret의 이름만 지정하면 된다.
      secretName: nginx-tls
